2009-04-07  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/check-hildon-color-chooser.c (START_TEST): Remove unused
	variable assignment.

2009-04-07  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c (hildon_touch_selector_get_active):
	Check the return value of gtk_tree_selection_get_selected()
	for safety.

2009-04-06  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-animation-actor.c
	* src/hildon-button.c
	* src/hildon-main.c
	* src/hildon-pannable-area.c
	* src/hildon-picker-button.c
	* src/hildon-program.c
	* src/hildon-remote-texture.c
	* src/hildon-text-view.c
	* src/hildon-touch-selector.c
	* src/hildon-window-stack.c
	* src/hildon-window.c:
	Add missing 'Since: 2.2' tags.

	* doc/hildon-sections.txt:
	Add some missing symbols.

	* doc/hildon-docs.sgml:
	New 'Other' section for HildonAnimationActor and
	HildonRemoteTexture

2009-04-06  Alberto Garcia  <agarcia@igalia.com>

	Patch by Iván Gómez (igomez@igalia.com)

	* doc/building.sgml
	* doc/compiling.sgml
	* doc/hildon-docs.sgml
	* doc/hildon-sections.txt
	* doc/migration.sgml
	* doc/resources.sgml
	* doc/running.sgml:
	New chapters on using the Hildon library.
	Updated the general structure of the reference manual.
	Other minor documentation fixes.

	* src/hildon-calendar-popup.c
	* src/hildon-calendar.c
	* src/hildon-controlbar.c
	* src/hildon-date-editor.c
	* src/hildon-dialog.c
	* src/hildon-hvolumebar.c
	* src/hildon-number-editor.c
	* src/hildon-range-editor.c
	* src/hildon-sort-dialog.c
	* src/hildon-time-editor.c
	* src/hildon-time-picker.c
	* src/hildon-volumebar-range.c
	* src/hildon-volumebar.c
	* src/hildon-vvolumebar.c
	* src/hildon-weekday-picker.c:
	Add deprecation notes

	* src/hildon-pannable-area.c (hildon_pannable_area_class_init):
	Document 'horizontal-movement' and 'vertical-movement' signals.

2009-04-06  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.60]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.
